TDP-670: Adds optional preprocess step for all actions.
* Adds a compile() step to allow actions to indicate it should be ignore (only used in Split action).
* Updates unit test to leverage compile() + apply().
* Reduce dependency on apply* methods on actions.
* Moves ExtendedStream to backend-common to ease sharing.